# academic-experiments

./: .clang-format  .gitignore  LICENSE  README.md
.github/workflows/: cmake.yml
data/_benchmarks/direct-acyclic-graphs/: 10-14.source.g
data/_test/direct-acyclic-graphs/: 10-14.communities.g  10-14.result.g  10-14.source.g  10-36.result.g  17-67.result.g  17-67.source.g  32-376.result.g  32-376.source.g
data/_test/graphs/: 10-14.communities.g  10-14.result.g  10-14.source.g  10-36.communities.g  10-36.source.g  17-46.result.g  17-46.source.g  17-48.result.g  17-48.source.g  17-57.result.g  17-57.source.g  17-61 (2).result.g  17-61 (2).source.g  17-61.result.g  17-61.source.g  17-67.communities.g  32-376 (2).result.g  32-376 (2).source.g  32-376.analysis.g  32-376.communities.g  32-376.result.g  7-7 (2).communities.g  7-7 (2).result.g  7-7 (2).source.g  7-7 (3).result.g  7-7 (3).source.g  7-7.communities.g  7-7.result.g  7-7.source.g  8-9.communities.g  8-9.result.g  8-9.source.g  9-12 (2).communities.g  9-12 (2).result.g  9-12 (2).source.g  9-12.communities.g  9-12.result.g  9-12.source.g
data/direct-acyclic-graphs/: 300-35880.input  4800-4799.out.g  7-7.dimacs9
libs/: .gitignore
scripts/: ComposeGroupsResults.ps1  ComposeResults.ps1  GenerateClusteredGraph.ps1  GenerateClusters.ps1  RunAPSP.ps1  RunConfigAPSP.ps1
src/_common/: communities-io.hpp  constants.hpp  graphs-generators.hpp  graphs-io.hpp  matrix-abstract.hpp  matrix-access.hpp  matrix-io.hpp  matrix-manip.hpp  matrix-traits.hpp  matrix-wrap.hpp  matrix.hpp  measure.hpp  memory.hpp  osx-memory.hpp  rect-matrix.hpp  rect-shape.hpp  shapes-io.hpp  shapes-manip.hpp  shapes-traits.hpp  square-shape-io.hpp  square-shape.hpp  win-memory.hpp  workspace.hpp
src/_common/portables/hacks/: defines.h
src/_common/portables/posix/: getopt.h
src/apsp/: CMakeLists.txt  CMakePresets.json  README.md  apsp.code-workspace  cmake-variants.yaml  constants.hpp  io.hpp
src/apsp/000/: 00.hpp  01.hpp
src/apsp/000/shell/: _application.cpp  _benchmark.cpp  _test.cpp
src/apsp/001/: 00.hpp  01.hpp
src/apsp/001/shell/: _application.cpp  _benchmark.cpp  _test.cpp
src/apsp/algorithms/: 00.hpp  01.hpp  02.hpp
src/apsp/fw/00/: _application.cpp  _benchmark.cpp  _test.cpp  algorithms.hpp
src/apsp/fw/utilz/: constants.hpp  io.hpp
src/apsp/shell/: _application.cpp  _test.cpp
src/apsp/src/: _application.cpp  _benchmark.cpp  _test.cpp
src/apsp/src/utilz/: io.hpp
src/apsp/src/variants/: _shell_inject.hpp
src/apsp/src/variants/00/: algorithm.hpp
src/apsp/src/variants/01/: algorithm.hpp
src/apsp/src/variants/02/: algorithm.hpp
src/apsp/src/variants/03/: algorithm.hpp
src/apsp/src/variants/04/: algorithm.hpp
src/apsp/src/variants/05/: algorithm.hpp
src/apsp/src/variants/06/: algorithm.hpp  algorithm.metal
src/apsp/src/variants/07/: algorithm.hpp
src/apsp/src/variants/08/: algorithm.hpp
src/apsp/src/variants/09/: algorithm.hpp  algorithm.metal
src/tools/: CMakeLists.txt  CMakePresets.json  graphg.cpp  mempagei.cpp  tools.code-workspace
src/tools/src/: grapha.cpp  graphc.cpp  graphg.cpp  graphm.cpp  graphp.cpp  graphw.cpp  mempagei.cpp
src/utilz/: _internal.hpp  cargs.h  graphs-cio.hpp  graphs-fio.hpp  graphs-generators.hpp  graphs-io.hpp  graphs.h  io.h  matrix.h  matrix_io.h  measure.hpp  memory.hpp  operations.hpp  rect-shape.hpp  rect_shape.h  rect_shape_matrix_io.h  square-shape-graphs.hpp  square-shape-io.hpp  square-shape.hpp  square_shape.h  win-memory.hpp  win-wrappers.hpp  workspace.hpp
src/utilz/tools/: graphg.cpp
